# cpp-expenses-manager

./: .gitignore  CMakeLists.txt  README.md
data/: expenses.txt
include/: Expense.hpp  ExpenseManager.hpp  Storage.hpp
src/: ExpenseManager.cpp  Storage.cpp  main.cpp
